# rl-eng

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  agent_init.sh  pyproject.toml
.gemini/: settings.json
.github/workflows/: ci.yml
apps/tic_tac_toe/: build_app.sh  gui.py  launcher.py
artifacts/exports/tic_tac_toe_v0.1/: config.yaml
experiments/multi_armed_bandits/: config.yaml  eval.py
experiments/tic_tac_toe/: __init__.py  config.yaml  eval.py  train.py
games/tic_tac_toe/: TicTacToe.spec  build_app.sh  gui.py  launcher.py
images/: .pre-commit-config.yaml  pyproject.toml
models/stable/tic_tac_toe_v0.1/: graduation_metadata.json  state_values_o.json  state_values_x.json
notebooks/: multi_armed_bandits.ipynb  tic_tac_toe.ipynb
rl_eng/: config.py  multi_armed_bandits.py  tic_tac_toe.py  tic_tac_toe_pygame.py
rl_eng/agents/: tic_tac_toe_tabular.py  tic_tac_toe_td.py
rl_eng/data/: __init__.py  trajectory.py
rl_eng/envs/: tic_tac_toe.py
rl_eng/envs/tic_tac_toe/: __init__.py  env.py  utils.py
rl_eng/evaluation/: __init__.py  tic_tac_toe.py
rl_eng/interfaces/: __init__.py  env.py  learner.py  model.py  rollout.py
rl_eng/learners/: td_learner.py
rl_eng/models/: state_value_table.py
rl_eng/rollout/: __init__.py  tic_tac_toe.py  trajectory.py
scripts/: plot_learning_curves.py  promote_run_to_export.py  promote_run_to_stable.py
tests/: test_agent_tic_tac_toe_tabular.py  test_agent_tic_tac_toe_td.py  test_env_tic_tac_toe.py  test_facade_tic_tac_toe.py  test_learner_td.py  test_rollout_tic_tac_toe.py
